2002-02-24  Bruno Haible  <bruno@clisp.org>

	* vasprintf.h: New file.
	* vasprintf.c: Include it.
	* xerror.c: Likewise.
	* Makefile.am (LIBADD_SOURCE): Add vasprintf.h.

2002-02-17  Bruno Haible  <bruno@clisp.org>

	* utf8-ucs4.h (u8_mbtouc_aux): Stricter range checking.

2002-02-15  Bruno Haible  <bruno@clisp.org>

	* config.charset [msdosdjgpp]: For Russian, use CP866.

2002-02-09  Bruno Haible  <bruno@clisp.org>

	* c-ctype.h (c_is*): Change return type to bool.
	* c-ctype.c (c_is*): Likewise.

	* tmpdir.h (path_search): Change last argument's type to bool.
	* tmpdir.c (path_search): Likewise.
	(direxists): Change return type to bool.

	* vasprintf.c (int_vasprintf): Change total_width to size_t.

2002-02-11  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for NetBSD.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* ucs4-utf8.h: New file.
	* ucs4-utf16.h: New file.
	* Makefile.am (libgettextlib_la_SOURCES): Add them.

2002-02-03  Bruno Haible  <bruno@clisp.org>

	* xerror.c (multiline_warning): Remove temporary hack.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-30  Bruno Haible  <bruno@clisp.org>

	* error.c: Compile nothing if HAVE_ERROR_AT_LINE is set.
	* strtoul.c: Compile nothing if HAVE_STRTOUL is set.
	* Makefile.am (libgettextlib_la_SOURCES): Add error.h, error.c,
	strtoul.c.
	(LIBADD_SOURCE): Remove error.h, error.c, strtoul.c.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* getline.c: Remove NDEBUG. It killed the effect of assert().

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_LDFLAGS): Use @LTLIBINTL@ instead of
	@INTLLIBS@, and @LTLIBICONV@ instead of @LIBICONV@.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* xerror.c (multiline_warning): Add a newline if the message doesn't
	terminate with a newline.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* gettext.h (gettext_noop): Remove the parentheses around the
	expansion.
