@@ -1,3 +1,10 @@
+2002-02-24  Bruno Haible  <bruno@clisp.org>
+
+	* po-lex.c: Include libstdarg.h.
+	(VA_START, va_alist, va_dcl): Remove macros.
+	(po_gram_error): Modernize varargs handling. Fix memory leak.
+	(po_gram_error_at_line): Likewise.
+
 2002-02-21  Bruno Haible  <bruno@clisp.org>
 
 	* msggrep.c: Include liballoca.h.
